--- a/style.css
+++ b/style.css
@@ -20,7 +20,7 @@ body {
     width: 612px;
     height: 792px;
     flex-grow: 0;
-    padding: 46px 13px 0px 16px;
+    /* padding: 46px 13px 0px 16px; */
     background-color: #fff;
     margin: auto;
 }
@@ -38,19 +38,19 @@ a {
     -webkit-text-fill-color: transparent;
 }
 
-.text--9px {
+.s {
     font-size: 9px;
 }
 
-.text--10px {
+.m {
     font-size: 10px;
 }
 
-.text--11px {
+.l {
     font-size: 11px;
 }
 
-.text--12px {
+.xl {
     font-size: 12px;
 }
 
@@ -69,15 +69,24 @@ a {
 
 }
 
-
-/*header css*/
-.titleAndPicture {
-    display: flex;
-    gap: 64px;
-    padding-bottom: 49px;
+hr {
+    border: 0;
+    height: 0.5px;
+    background-color: #999;
+    max-width: 342px;
 }
 
-.titleAndDescription {
+
+/*header css*/
+.hero {
+    display: flex;
+    gap: 64px;
+    padding-top: 46px;
+    margin-left: 16px;
+    margin-bottom: 49px;
+}
+
+.hero__text {
     max-width: 342px;
 }
 
@@ -92,15 +101,17 @@ a {
 }
 
 .header__description {
-    padding-top: 14px;
-    padding-bottom: 14px;
+    margin-top: 14px;
+    margin-bottom: 14px;
 }
 
 .socialMediaBox {
     max-width: 246px;
+    width: 246px;
     display: flex;
     flex-wrap: wrap;
-
+    justify-content: space-between;
+    gap: 5px 0px;
 }
 
 .email,
@@ -112,13 +123,7 @@ a {
 }
 
 .email {
-    padding-right: 100px;
-    padding-bottom: 5px
-}
-
-.linkedin,
-.github {
-    padding-right: 28px;
+    flex-basis: 100%;
 }
 
 .picture {
@@ -133,43 +138,59 @@ a {
 }
 
 .sectionTitle {
-    padding-bottom: 7px;
-}
-
-.card__description {
-    display: block;
-    padding-top: 4px;
-    padding-bottom: 4.5px;
+    margin-bottom: 7px;
 }
 
 hr {
     margin-bottom: 6px;
 }
 
-.leftSideContent {
-    display: flex;
-    flex-direction: column;
+.experience {
+    margin-left: 16px;
+    display: block;
     min-width: 342px;
     margin-right: 16px;
 }
 
-.GrayText--padding {
+.experience p {
+    max-width: 342px;
+}
+
+.experience .card p:first-of-type {
+    margin-top: 2px;
+}
+
+.experience .card p:last-of-type {
+    margin-bottom: 3.5px;
+}
+
+
+.GrayText--margin {
     margin-bottom: 7.5px;
 }
 
 .descriptionLinks {
     display: flex;
+    width: fit-content;
     text-decoration: underline;
 }
 
+.descriptionLinks:last-of-type p:last-of-type {
+    margin-top: 9px;
+}
+
+.rightSideContent {
+    max-width: 225px;
+}
+
 .rightSideContent p {
-    padding-top: 2px;
+    margin-top: 2px;
 }
 
-.title--padding {
-    padding-top: 22px;
+.title--margin {
+    margin-top: 22px;
 }
 
-.paddingLinkDescription {
+.marginLinkDescription {
     margin-top: 9px;
 }
