--- a/style.css
+++ b/style.css
@@ -2,7 +2,6 @@
 
 * {
     margin: 0;
-    text-align: left;
     text-decoration: none;
     font-family: IBM Plex Sans;
     font-stretch: normal;
@@ -105,7 +104,6 @@ hr {
 .socialMediaBox {
     width: 246px;
     display: flex;
-    flex-wrap: wrap;
     gap: 5px 0px;
 }
 
@@ -191,15 +189,16 @@ hr {
 
 @media (max-width:612px) {
     .base{
+        text-align: center;
         height: fit-content;
+        max-width: 100vw;
     }
     .hero{
         flex-direction: column;
+        align-items: center;
     }
     .mainDescription {
         flex-direction: column;
-    }
-    .rightSideContent{
-        margin-left:16px;
+        align-items: center;
     }
 }
