--- a/style.css
+++ b/style.css
@@ -104,6 +104,7 @@ hr {
 .socialMediaBox {
     width: 246px;
     display: flex;
+    flex-direction: column;
     gap: 5px 0px;
 }
 
@@ -200,5 +201,13 @@ hr {
     .mainDescription {
         flex-direction: column;
         align-items: center;
+    }
+    .rightSideContent{
+        margin-bottom: 10px;
+    }
+    .socialMediaBox{
+        flex-direction: row;
+        justify-content: center;
+        width: auto;
     }
 }
